--- a/QualiWatch/Pages/Index.razor
+++ b/QualiWatch/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 <IndexHeader/>
-<div class="grid md:grid-cols-2 lg:grid-cols-3 sm:grid-cols-1 gap-4 gas">
+<div class="grid md:grid-cols-2 lg:grid-cols-3 sm:grid-cols-1 3xl:grid-cols-4 gap-4 gas">
     @if (viewModel.IsRefreshing)
     {
         <p>Carregando</p>
@@ -14,7 +14,7 @@
     }
 </div>
 @code{
-    ProdutoViewModel viewModel = new ProdutoViewModel();
+    ProdutoViewModel viewModel;
     protected override void OnInitialized()
     {
         viewModel = new ProdutoViewModel();
